[package]
name = "retry"
version = "1.3.28"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
description = "Retry a command until it succeeds"
readme = "README.md"
homepage = "https://github.com/EricCrosson/retry"
keywords = ["cli", "retry"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/flake.{lock,nix}"
]

[[bin]]
name = "retry"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.24", features = ["cargo", "derive", "wrap_help"] }
duration-string = { version = "=0.4.0", default-features = false }
tokio = { version = "=1.42.0", features = ["full", "macros", "process", "time"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
